# shorten-rs

./: Cargo.toml  LICENSE  README.md  schema.sql
src/: lib.rs  link.rs  main.rs  routes.rs  state.rs
src/models/: link.rs
src/routes/: link.rs
