[package]
name = "shorten-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
dashmap = "6.1.0"
rand = "0.9.2"
serde = "1.0.228"
shuttle-actix-web = "0.57"
shuttle-runtime = "0.57"
shuttle-shared-db = { version = "0.57.0", features = ["postgres", "sqlx"] }
sqlx = "0.8.6"
tokio = "1"
url = "2.5.7"
